moved img to assets

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- <h2>Graphs</h2> -->
     <div class="chart-container">
         <div class="nav">
-            <img class="back-btn" onclick="loadInitialData()" src="arrow.png" >
+            <img class="back-btn" onclick="loadInitialData()" src="assets/arrow.png" >
         </div>
         <canvas id="mixed-chart" ></canvas>
     </div>
